--- a/SiwBooks/src/main/resources/static/css/style.css
+++ b/SiwBooks/src/main/resources/static/css/style.css
@@ -149,3 +149,17 @@ footer {
     border-top: 1px solid #eee3d8;
     margin-top: 60px;
 }
+
+.book a {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+    text-align: center;
+}
+
+.book img {
+    width: 150px;
+    height: auto;
+    border-radius: 8px;
+}
+
