--- a/SiwBooks/src/main/resources/templates/bookDetails.html
+++ b/SiwBooks/src/main/resources/templates/bookDetails.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="it" xmlns:th="http://www.thymeleaf.org">
+<html lang="it" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <meta charset="UTF-8">
@@ -20,26 +21,25 @@
             <h1 th:text="${book.title}">Titolo</h1>
             <img th:src="@{'/books/' + ${book.id} + '/cover'}" th:alt="${book.title}" />
             <p><strong>Anno di pubblicazione:</strong> <span th:text="${book.year}">Anno</span></p>
+
             <div>
                 <h3>Autori</h3>
                 <ul>
-                    <li th:each="autore : ${book.authors}" th:text="${autore.name + ' ' + autore.surname}">Autore</li>
+                    <li th:each="autore : ${book.authors}"
+                        th:text="${autore.name + ' ' + autore.surname}">
+                        Autore
+                    </li>
                 </ul>
             </div>
-            <div>
-                <h3>Recensioni</h3>
-                <ul>
-                    <li th:each="recensione : ${book.reviews}" th:text="${recensione.content}">Recensione</li>
-                </ul>
-            </div>
+
             <div>
                 <h3>Recensioni</h3>
                 <ul>
                     <li th:each="recensione : ${book.reviews}">
-                        <strong th:text="${recensione.title}">Titolo</strong>
-                        - <span th:text="${recensione.rating} + '/5'">Valutazione</span>
-                        <p th:text="${recensione.text}">Testo</p>
-                        <em th:text="${recensione.author.name}">Autore</em>
+                        <strong th:text="${recensione.title}">Titolo recensione</strong><br/>
+                        <span th:text="'Valutazione: ' + ${recensione.rating} + '/5'">Valutazione</span><br/>
+                        <p th:text="${recensione.text}">Testo recensione</p>
+                        <em th:text="${recensione.author.username}">Autore recensione</em>
                     </li>
                 </ul>
             </div>
@@ -47,7 +47,8 @@
             <!-- Form per nuova recensione -->
             <div sec:authorize="isAuthenticated()">
                 <h3>Lascia una recensione</h3>
-                <form th:action="@{/books/{id}/review(id=${book.id})}" th:object="${review}" method="post">
+                <form th:action="@{/books/{id}/review(id=${book.id})}"
+                      th:object="${review}" method="post">
                     <label for="title">Titolo</label>
                     <input type="text" id="title" th:field="*{title}" required />
 
@@ -59,9 +60,7 @@
 
                     <button type="submit">Invia recensione</button>
                 </form>
-
             </div>
-
         </section>
     </main>
 
