--- a/SiwBooks/src/main/resources/templates/bookDetails.html
+++ b/SiwBooks/src/main/resources/templates/bookDetails.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="it" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="it" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title th:text="${book.title} + ' - Dettagli libro'">Dettagli libro</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/book-detail.css" />
 </head>
 
 <body>
@@ -17,43 +17,45 @@
     </header>
 
     <main>
-        <section class="book-detail">
-            <h1 th:text="${book.title}">Titolo</h1>
-            <img th:src="@{'/books/' + ${book.id} + '/cover'}" th:alt="${book.title}" />
-            <p><strong>Anno di pubblicazione:</strong> <span th:text="${book.year}">Anno</span></p>
+        <section class="book-detail-container">
+            <div class="book-info">
+                <h1 th:text="${book.title}">Titolo</h1>
+                <div class="book-top">
+                    <img th:src="@{'/books/' + ${book.id} + '/cover'}" th:alt="${book.title}" />
+                    <div class="book-meta">
+                        <p><strong>Anno di pubblicazione:</strong> <span th:text="${book.year}">Anno</span></p>
+                        <div class="authors">
+                            <h3>Autori</h3>
+                            <ul>
+                                <li th:each="autore : ${book.authors}" th:text="${autore.name + ' ' + autore.surname}">
+                                    Autore</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
 
-            <div>
-                <h3>Autori</h3>
-                <ul>
-                    <li th:each="autore : ${book.authors}"
-                        th:text="${autore.name + ' ' + autore.surname}">
-                        Autore
-                    </li>
-                </ul>
+                <div class="reviews">
+                    <h3>Recensioni</h3>
+                    <ul>
+                        <li th:each="recensione : ${book.reviews}" class="review-item">
+                            <strong th:text="${recensione.title}">Titolo recensione</strong><br />
+                            <span th:text="'Valutazione: ' + ${recensione.rating} + '/5'">Valutazione</span><br />
+                            <p th:text="${recensione.text}">Testo recensione</p>
+                            <em th:text="${recensione.author.username}">Autore recensione</em>
+                        </li>
+                    </ul>
+                </div>
             </div>
 
-            <div>
-                <h3>Recensioni</h3>
-                <ul>
-                    <li th:each="recensione : ${book.reviews}">
-                        <strong th:text="${recensione.title}">Titolo recensione</strong><br/>
-                        <span th:text="'Valutazione: ' + ${recensione.rating} + '/5'">Valutazione</span><br/>
-                        <p th:text="${recensione.text}">Testo recensione</p>
-                        <em th:text="${recensione.author.username}">Autore recensione</em>
-                    </li>
-                </ul>
-            </div>
-
-            <!-- Form per nuova recensione -->
-            <div sec:authorize="isAuthenticated()">
+            <div sec:authorize="isAuthenticated()" class="review-form-container">
                 <h3>Lascia una recensione</h3>
-                <form th:action="@{/books/{id}/review(id=${book.id})}"
-                      th:object="${review}" method="post">
+                <form th:action="@{/books/{id}/review(id=${book.id})}" th:object="${review}" method="post"
+                    class="review-form">
                     <label for="title">Titolo</label>
                     <input type="text" id="title" th:field="*{title}" required />
 
                     <label for="text">Testo</label>
-                    <textarea id="text" th:field="*{text}" required></textarea>
+                    <textarea id="text" th:field="*{text}" rows="4" required></textarea>
 
                     <label for="rating">Valutazione</label>
                     <input type="number" id="rating" th:field="*{rating}" min="1" max="5" required />
@@ -63,6 +65,8 @@
             </div>
         </section>
     </main>
+
+
 
     <footer>
         <p>&copy; 2025 SiwBooks. Tutti i diritti riservati.</p>
