--- a/SiwBooks/src/main/resources/templates/register.html
+++ b/SiwBooks/src/main/resources/templates/register.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="it" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8" />
     <title>Registrazione - SiwBooks</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/register.css" />
 </head>
-<body>
+
+<body class="register-page">
     <div class="register-container">
         <h2>Registrati su SiwBooks</h2>
 
         <form th:action="@{/register}" th:object="${user}" method="post">
             <div>
                 <label for="username">Username</label>
-                <input type="text" th:field="*{username}" required />
+                <input type="text" th:field="*{username}" id="username" required />
             </div>
 
             <div>
                 <label for="email">Email</label>
-                <input type="email" th:field="*{email}" required />
+                <input type="email" th:field="*{email}" id="email" required />
             </div>
 
             <div>
                 <label for="password">Password</label>
-                <input type="password" th:field="*{password}" required />
+                <input type="password" th:field="*{password}" id="password" required />
             </div>
 
             <div>
@@ -30,9 +33,11 @@
             </div>
         </form>
 
-        <div>
-            <a th:href="@{/login}">Hai già un account? Accedi</a>
+        <div class="login-link">
+            <p>Hai già un account?</p>
+            <a th:href="@{/login}" class="login-button">Accedi</a>
         </div>
     </div>
 </body>
+
 </html>
