--- a/SiwBooks/src/main/resources/templates/authorDetails.html
+++ b/SiwBooks/src/main/resources/templates/authorDetails.html
@@ -13,8 +13,11 @@
     <header>
         <div class="logo">📚 SiwBooks</div>
         <nav>
-            <a href="/">Home</a>
-            <a href="/authors">Tutti gli autori</a>
+            <ul>
+                <li><a href="/">Catalogo</a></li>
+                <li><a href="/authors">Autori</a></li>
+                <li><a href="/login">Login</a></li>
+            </ul>
         </nav>
     </header>
 
