--- a/SiwBooks/src/main/resources/templates/register.html
+++ b/SiwBooks/src/main/resources/templates/register.html
@@ -9,6 +9,16 @@
 </head>
 
 <body class="register-page">
+    <header>
+        <div class="logo">📚 SiwBooks</div>
+        <nav>
+            <ul>
+                <li><a href="/">Catalogo</a></li>
+                <li><a href="/authors">Autori</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <div class="register-container">
         <h2>Registrati su SiwBooks</h2>
 
