--- a/SiwBooks/src/main/resources/templates/authors.html
+++ b/SiwBooks/src/main/resources/templates/authors.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it" xmlns:th="http://www.thymeleaf.org">
+<html lang="it" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,12 @@
             <ul>
                 <li><a href="/">Catalogo</a></li>
                 <li><a href="/authors">Autori</a></li>
-                <li><a href="/login">Login</a></li>
+                <li sec:authorize="!isAuthenticated()"><a href="/login">Login</a></li>
+                <li sec:authorize="isAuthenticated()">
+                    <form th:action="@{/logout}" method="post">
+                        <button type="submit" class="logout-button">Logout</button>
+                    </form>
+                </li>
             </ul>
         </nav>
     </header>
