--- a/SiwBooks/src/main/resources/templates/bookDetails.html
+++ b/SiwBooks/src/main/resources/templates/bookDetails.html
@@ -15,7 +15,12 @@
             <ul>
                 <li><a href="/">Catalogo</a></li>
                 <li><a href="/authors">Autori</a></li>
-                <li><a href="/login">Login</a></li>
+                <li sec:authorize="!isAuthenticated()"><a href="/login">Login</a></li>
+                <li sec:authorize="isAuthenticated()">
+                    <form th:action="@{/logout}" method="post">
+                        <button type="submit" class="logout-button">Logout</button>
+                    </form>
+                </li>
             </ul>
         </nav>
     </header>
