--- a/SiwBooks/src/main/resources/templates/admin/adminHome.html
+++ b/SiwBooks/src/main/resources/templates/admin/adminHome.html
@@ -34,7 +34,7 @@
             <h2>Gestione Autori</h2>
             <div class="admin-actions">
                 <a href="/admin/authors/new" class="admin-button">Aggiungi Autore</a>
-                <a href="/admin/authors" class="admin-button">Modifica / Elimina Autori</a>
+                <a href="/admin/autori" class="admin-button">Modifica / Elimina Autori</a>
             </div>
         </section>
 
