--- a/SiwBooks/src/main/resources/static/css/admin.css
+++ b/SiwBooks/src/main/resources/static/css/admin.css
@@ -1,3 +1,68 @@
+
+header {
+    background-color: #fff;
+    color: #3e3e3e;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 30px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+
+.header-left {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.header-right {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+/* Logo */
+.logo {
+    font-size: 1.8em;
+    font-weight: bold;
+    color: #d4a373;
+}
+
+/* Bottone Home Admin */
+.admin-home-button {
+    background-color: #b08968;
+    color: white;
+    padding: 6px 12px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: 500;
+    transition: background-color 0.3s ease;
+}
+
+.admin-home-button:hover {
+    background-color: #8f6d52;
+}
+
+/* Bottone Logout */
+.logout-button {
+    background: none;
+    border: none;
+    color: #3e3e3e;
+    font-weight: 500;
+    cursor: pointer;
+    font-size: 1em;
+    padding: 0;
+    transition: color 0.3s;
+}
+
+.logout-button:hover {
+    color: #d4a373;
+    text-decoration: underline;
+}
+
 .admin-actions {
     display: flex;
     flex-wrap: wrap;
