--- a/SiwBooks/src/main/resources/static/css/style.css
+++ b/SiwBooks/src/main/resources/static/css/style.css
@@ -181,3 +181,63 @@ footer {
     display: block;
     text-align: center;
 }
+
+.review-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.review-item {
+    padding: 0;
+}
+.review-book-title {
+    font-size: 1.2em;
+    color: #b08968;
+    margin-bottom: 5px;
+}
+
+.review-delete-button {
+    background-color: #e74c3c;
+    color: white;
+    border: none;
+    padding: 8px 18px;
+    border-radius: 25px;
+    font-weight: 600;
+    cursor: pointer;
+    font-size: 0.95em;
+    margin-top: 10px;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.review-delete-button:hover {
+    background-color: #c0392b;
+    transform: scale(1.03);
+}
+
+.header-left {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.admin-home-button {
+    margin-left: 15px;
+    margin-right: 15px;
+    background-color: #b08968;
+    color: white;
+    padding: 6px 12px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: 500;
+    transition: background-color 0.3s ease;
+}
+
+.admin-home-button:hover {
+    background-color: #8f6d52;
+}
+
+
