--- a/SiwBooks/src/main/resources/templates/admin/adminHome.html
+++ b/SiwBooks/src/main/resources/templates/admin/adminHome.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <title>Admin Homepage</title>
-    <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/admin.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    
 </head>
+
 <body>
     <header>
-        <div>
+        <div class="header-left">
             <span class="logo">SIWBooks Admin</span>
         </div>
-        <div th:if="${userDetails}">
-            <span th:text="${userDetails.username}"></span>
-            <a class="logout-button" href="/logout">Logout</a>
+        <div class="header-right">
+            <li sec:authorize="isAuthenticated()">
+                <form th:action="@{/logout}" method="post" style="margin:0;">
+                    <button type="submit" class="logout-button">Logout</button>
+                </form>
+            </li>
         </div>
     </header>
+
 
     <main>
         <section class="hero">
@@ -50,4 +57,5 @@
         &copy; 2025 SIWBooks. Tutti i diritti riservati.
     </footer>
 </body>
+
 </html>
