--- a/SiwBooks/src/main/resources/templates/admin/newBook.html
+++ b/SiwBooks/src/main/resources/templates/admin/newBook.html
@@ -9,14 +9,16 @@
 
 <body>
     <header>
-        <div>
+        <div class="header-left">
             <span class="logo">SIWBooks Admin</span>
         </div>
-        <div th:if="${userDetails}">
-            <span th:text="${userDetails.username}"></span>
-            <form th:action="@{/logout}" method="post">
-                <button type="submit" class="logout-button">Logout</button>
-            </form>
+        <div class="header-right">
+            <a href="/admin/home" class="admin-home-button">Home Admin</a>
+            <li sec:authorize="isAuthenticated()">
+                <form th:action="@{/logout}" method="post" style="margin:0;">
+                    <button type="submit" class="logout-button">Logout</button>
+                </form>
+            </li>
         </div>
     </header>
 
