--- a/SiwBooks/src/main/resources/static/css/style.css
+++ b/SiwBooks/src/main/resources/static/css/style.css
@@ -160,6 +160,13 @@ main {
     margin-bottom: 12px;
 }
 
+.book-actions {
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+
 .book p {
     font-weight: 500;
     color: #3e3e3e;
